@@ -1,3 +1,4 @@
 #!/bin/bash
-export JAVA_TOOL_OPTIONS="--add-opens=java.base/java.lang=ALL-UNNAMED"
-mvn compile quarkus:dev -f ../
+cd ..
+cd angular-app
+npm start
